changes - modified the first patch note in order to make it more serious

--- a/public/patch-notes/v-0.1.md
+++ b/public/patch-notes/v-0.1.md
@@ -4,10 +4,5 @@
 
 # Added features
 
-- test
-- color extraction from image
-- palette download
-
-# Fixes
-
-- None cause i am a genius (lying is bad i know)
+- Color extraction from image
+- Downloadable palette
