--- a/public/patch-notes/v-0.3.md
+++ b/public/patch-notes/v-0.3.md
@@ -1,4 +1,5 @@
 # Summary
 
-Once again a lot of refactoring happened
-No features or fixes this time however
+Once again a lot of refactoring happened.
+
+> No features or fixes this time however
