--- a/public/patch-notes/v-0.4.md
+++ b/public/patch-notes/v-0.4.md
@@ -1,7 +1,7 @@
 # Summary
 
 OK big updates this time.
-This is the first world wide web release, yes the real release this time, fixes major fixes that causes app malfunctioning
+This is the first world wide web release, yes the real release this time, major fixes that causes app malfunctioning
 
 # Fixes
 
